--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,7 +51,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 3rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -106,6 +106,14 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.sodaImage {
+  cursor: pointer;
+}
+
+.sodaImage:hover {
+  transform: scale(1.1);
 }
 
 @media (max-width: 600px) {
