--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,7 +76,7 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -109,7 +109,11 @@
 }
 
 .sodaImage {
+  margin-bottom: 2em;
+}
+.sodaImage * {
   cursor: pointer;
+  border-radius: 5%;
 }
 
 .sodaImage:hover {
